# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.12.1] - 2024-07-23

### Fixed
- Force using EN-US locale on non-english systems (#34).

## [0.12.0] - 2024-06-27

### Added
- Temperature calibration offset for individual channels (#29).
- DMM select slot and channel offset (#30).
- DMM trigger delay (auto) parameter (#31).
- Setuptools and tox configuration files.
- Application icon.

### Removed
- Qt Designer .ui files.
- Obsolete setup.py file.

### Changed
- Refactored widgets and thread workers.
- Migrated to comet 1.0.x (#25).

### Fixed
- Wrong voltage in It output file headers (#32).
- Multimeter filter settings.
- Contents URL.

## [0.11.2] - 2023-07-06

### Fixed
- broken pyinstaller.spec for Windows.

## [0.11.1] - 2023-06-19

### Added
- Output enable for 2410 SMU (#26).

## [0.11.0] - 2021-06-22

### Added
- SMU total current column in output files (#23).

### Changed
- Synchronized zoom for IV and It plots (#18).

## [0.10.0] - 2020-08-17

### Changed
- Ramp down before SMU reset (#19).
- Speed up ramp down (#20).

## [0.9.0] - 2020-07-06

### Changed
- Show seconds in plot time axes (#15).
- Write HV status (ON, OFF, N/A) to files (#16).

## [0.8.0] - 2020-05-20

### Changed
- Improved log window
- Indicate climate chamber states: ON, OFF and PAUSE

### Fixed
- Various small fixes.

## [0.7.0] - 2020-05-18

### Added
- Log window.
- Multimeter filter settings.
- IV/It plot for SMU current
- Auto-scaled units (uA, nA, pA).

### Changed
- Show running state instead of program number

## [0.6.1] - 2020-05-05

### Changed
- Absolute step size for ramp.

### Fixed
- Total compliance for negative voltage.
- Ssingle compliance for negative voltage.

## [0.6.0] - 2020-02-14

### Added
- Negative voltages.
- Additional temperature plots.